--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
   <script>
-    const AS_URL_BASE = "https://script.google.com/macros/s/AKfycbw6F1ayG3FJmRntNauHmFpv9nlgA1o6h9LEGlP3dlU5joXvbxZwZAFdKQd5ZdbL_PQa/exec";
+    const AS_URL_BASE = "https://script.google.com/a/~/macros/s/AKfycbw6F1ayG3FJmRntNauHmFpv9nlgA1o6h9LEGlP3dlU5joXvbxZwZAFdKQd5ZdbL_PQa/exec";
     
     var url = document.location.href;
     var k = url.substr(url.lastIndexOf("k=")+2);
